fix: content overflow

--- a/src/components/screens/cart/cart-item/cart-item.module.scss
+++ b/src/components/screens/cart/cart-item/cart-item.module.scss
@@ -2,14 +2,28 @@
 
 .item {
 	display: flex;
+	flex-direction: column;
 	align-items: center;
-	gap: 10px;
+	flex-basis: 300px;
 	border: 1px solid $primary;
 	padding: 10px;
 	border-radius: 10px;
 }
 
-.name {
+.link {
+	width: 100%;
+	display: flex;
+	align-items: center;
+	gap: 10px;
+}
+
+.rightContent {
+	max-width: 165px;
+	overflow: hidden;
+}
+
+.name,
+.price {
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
