--- a/src/components/ui/products/product-item/product-item.module.scss
+++ b/src/components/ui/products/product-item/product-item.module.scss
@@ -44,4 +44,5 @@
 .price {
 	font-size: 18px;
 	text-align: right;
+	overflow: hidden;
 }
